<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="techni.mb.android.bloggies.MainActivity"
    android:id="@+id/container">
    <ImageView
        android:id="@+id/imageView_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bloggies"
        android:layout_centerHorizontal="true"

        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    >

    <Button
        android:id="@+id/button_twitter_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/connexion_twitter"/>
    <Button
        android:id="@+id/button_facebook_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/connexion_facebook"/>
    <Button
        android:id="@+id/button_creation_compte_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/creation_compte_bloggies"/>
</LinearLayout>

</RelativeLayout>
